:bug: Site > File tree > Prevent name wrapping

--- a/site/src/components/files-tree-file/style.styl
+++ b/site/src/components/files-tree-file/style.styl
@@ -1,8 +1,10 @@
 .name
     display block
+    white-space nowrap
 
     .text
         padding-left 12px
+        padding-right 6px
 
         .letter
             opacity 0.6
@@ -17,7 +19,7 @@
         top -1px
         padding-left 3px
         padding-right 3px
-        margin-left 4px
+        margin-left 0px
         border-radius: 6px;
         color #fff
         font-size 8px
