--- a/site/src/components/files-tree-folder/style.styl
+++ b/site/src/components/files-tree-folder/style.styl
@@ -1,11 +1,13 @@
 .name
     display block
+    white-space nowrap
 
     .icon
         opacity 0.6
 
     .text
         padding-left 12px
+        padding-right 6px
 
         .letter
             opacity 0.6
